2005-09-02  Johan Dahlin  <jdahlin@async.com.br>

	* configure.in: post release version bump

	* Changelog.pre-2-8: Move old changelog
